# pastebin

./: .env.example  .gitignore  README.MD  docker-compose.yml
api_gateway/: .env.example  .gitignore  Dockerfile  pyproject.toml
api_gateway/src/: KafkaProducerManager.py  __init__.py  config.py  main.py
api_gateway/src/auth/: exc_handler.py  router.py
api_gateway/src/auth/jwt/: JwtValidator.py  dependencies.py  exceptions.py
api_gateway/src/paste/: router.py
api_gateway/src/rest/: HttpManager.py  dependencies.py
auth_service/: .env.example  .gitignore  Dockerfile  pyproject.toml
auth_service/src/: __init__.py  config.py  main.py  models.py  utils.py
auth_service/src/auth/: AuthService.py  UserEventsPublisher.py  UserRepository.py  dependencies.py  exc_handlers.py  exceptions.py  router.py  service.py  utils.py
auth_service/src/auth/security/: JwtManager.py  bcrypt.py
auth_service/src/consumer/: consumer.py  utils.py
auth_service/src/database/: UserDAO.py  core.py
auth_service/src/producer/: KafkaProducer.py  dependencies.py
docs/: kafka.md  topics.md
nginx_gateway/: Dockerfile  nginx.conf
notification_service/: pyproject.toml
notification_service/src/: config.py  main.py
notification_service/src/core/: dependencies.py  exceptions.py  router.py  service.py  utils.py
notification_service/src/core/codes/: __init__.py  generator.py
notification_service/src/core/messaging/: consumer.py  producer.py
notification_service/src/core/redis/: __init__.py  manager.py
notification_service/src/core/security/: __init__.py  bearer.py
notification_service/src/database/: core.py  models.py
notification_service/src/database/DAO/: __init__.py  telegram.py
paste_service/: .env.example  .gitignore  Dockerfile  pyproject.toml  (+1 more)
schemas_loader/: Dockerfile  pyproject.toml
schemas_loader/schemas/telegram_notify/: key.avsc  value.avsc
schemas_loader/src/: config.py  main.py
telegram_worker/: Dockerfile  pyproject.toml
telegram_worker/src/: config.py  main.py
telegram_worker/src/bot/: core.py
telegram_worker/src/bot/handlers/: __init__.py
telegram_worker/src/bot/handlers/user/: __init__.py  commands.py  reply_buttons.py
telegram_worker/src/bot/keyboards/: __init__.py  buttons.py  start_kb.py
telegram_worker/src/bot/middlewares/: __init__.py  http.py  redis.py
telegram_worker/src/bot/states/: __init__.py  link.py
telegram_worker/src/core/: __init__.py  router.py  utils.py
telegram_worker/src/core/http/: __init__.py  manager.py
telegram_worker/src/core/messaging/: consumer.py
telegram_worker/src/core/ngrok/: manager.py
telegram_worker/src/core/redis/: __init__.py  manager.py
(+26 files in other folders)
