[project]
name = "paste_service"
version = "0.1.0"
description = "..."
authors = [{name = "Jahongir", email = "jahongir.hodjaniyazov@gmail.com"}]
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "pydantic ==2.11.7",
    "pydantic-settings ==2.10.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build_backend = "setuptools.build_meta"