[project]
name = "telegram_worker"
version = "0.1.0"
description = "..."
authors = [{name = "Jahongir", email = "jahongir.hodjaniyazov@gmail.com"}]
requires-python = ">=3.13"
dependencies = [
    "aiokafka >=0.12.0",
    "fastapi >=0.116.1",
    "pydantic >=2.11.7",
    "pydantic-settings >=2.10.1",
    "uvicorn >=0.35.0",
    "httpx >=0.28.1",
    "aiogram>=3.22.0",
    "redis[hiredis] ==6.4.0",
    "httpx ==0.28.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build_backend = "setuptools.build_meta"